--- a/aws_01.ipynb
+++ b/aws_01.ipynb
@@ -650,8 +650,8 @@
         "outputId": "620b005f-84ef-4aeb-93cc-0f6671a221ba"
       },
       "source": [
-        "# import getpass\n",
-        "# pwd=getpass.getpass(\"Enter DB Acces for PostgresSQL\")\n",
+        "import getpass\n",
+        "pwd=getpass.getpass(\"Enter DB Acces for PostgresSQL\")\n",
         "\n",
         "\n",
         "\n",
@@ -680,7 +680,7 @@
         "mode = \"append\"\n",
         "jdbc_url=\"jdbc:postgresql://mypostgresdb.cdt05xwzykeb.us-east-2.rds.amazonaws.com:5432/my_data_class_db\"\n",
         "config = {\"user\":\"root\", \n",
-        "          \"password\": \"c6Kvj$QiAKUZ\", \n",
+        "          \"password\": pwd, \n",
         "          \"driver\":\"org.postgresql.Driver\"}\n"
       ],
       "execution_count": 131,
