--- a/aws_01.ipynb
+++ b/aws_01.ipynb
@@ -78,7 +78,7 @@
         "import findspark\n",
         "findspark.init()"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -95,7 +95,7 @@
       "source": [
         "!wget https://jdbc.postgresql.org/download/postgresql-42.2.9.jar\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -126,7 +126,7 @@
       "source": [
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -141,7 +141,7 @@
         "from pyspark.sql import SparkSession\n",
         "spark = SparkSession.builder.appName(\"CloudETL\").config(\"spark.driver.extraClassPath\",\"/content/postgresql-42.2.9.jar\").getOrCreate()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -165,7 +165,7 @@
         "# Show DataFrame\n",
         "df.show()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,7 +217,7 @@
         "#                                         #\n",
         "###########################################"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -231,7 +231,7 @@
         "from pyspark.sql.types import IntegerType\n",
         "df = df.withColumn(\"star_rating\", df[\"star_rating\"].cast(IntegerType()))\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -245,7 +245,7 @@
         "from pyspark.sql import functions as f\n",
         "df = df.withColumn('review_status', f.when(f.col('star_rating') > 3, \"Positive\").otherwise(\"Negative\"))\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -264,7 +264,7 @@
         "df.show(10, False)\n",
         "                       "
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -308,7 +308,7 @@
         "df = df.withColumn(\"review_date\", date_format('review_date', \"yyyy-MM-dd\"))\n",
         "df.show()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -358,7 +358,7 @@
       "source": [
         "df.printSchema()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -402,7 +402,7 @@
         "#                                         #\n",
         "###########################################"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -423,7 +423,7 @@
         "customercount = customercount.withColumn(\"customer_count\", customercount[\"customer_count\"].cast(IntegerType()))\n",
         "customercount.show()\n"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -477,7 +477,7 @@
         "productcount = productcount[['product_id','product_title']]\n",
         "productcount.show()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -532,7 +532,7 @@
         "reviews = reviews.withColumn(\"review_date\", to_date(reviews[\"review_date\"]))\n",
         "reviews.show()"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -586,7 +586,7 @@
         "vinereviews = vinereviews.withColumnRenamed('review_body', \"vine\")\n",
         "vinereviews.show()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -638,7 +638,7 @@
         "#                                         #\n",
         "###########################################"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -660,7 +660,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -681,12 +681,12 @@
       "source": [
         "# Configure settings for RDS\n",
         "mode = \"append\"\n",
-        "jdbc_url=\"jdbc:postgresql://mypostgresdb.cdt05xwzykeb.us-east-2.rds.amazonaws.com:5432/my_data_class_db\"\n",
+        "jdbc_url=\"<ENTER ENDPOINT>\"\n",
         "config = {\"user\":\"root\", \n",
         "          \"password\": pwd, \n",
         "          \"driver\":\"org.postgresql.Driver\"}\n"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -699,7 +699,7 @@
       "source": [
         "# type(customercount)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -717,7 +717,7 @@
         "# customercount.printSchema()\n",
         "# reviews.printSchema()"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -744,7 +744,7 @@
       "source": [
         "customercount.write.jdbc(url=jdbc_url, table='customers', mode=mode, properties=config)\n"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -757,7 +757,7 @@
       "source": [
         "productcount.write.jdbc(url=jdbc_url, table='products', mode=mode, properties=config)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -770,7 +770,7 @@
       "source": [
         "reviews.write.jdbc(url=jdbc_url, table='review_id_table', mode=mode, properties=config)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -783,7 +783,7 @@
       "source": [
         "vinereviews.write.jdbc(url=jdbc_url, table='vine_table', mode=mode, properties=config)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
