--- a/level_1/aws_01.ipynb
+++ b/level_1/aws_01.ipynb
@@ -670,7 +670,7 @@
       "source": [
         "# Configure settings for RDS\n",
         "mode = \"append\"\n",
-        "jdbc_url=\"jdbc:postgresql://mypostgresdb.cdt05xwzykeb.us-east-2.rds.amazonaws.com:5432/my_data_class_db\"\n",
+        "jdbc_url=\"<insert endpoint>\"\n",
         "config = {\"user\":\"root\", \n",
         "          \"password\": pwd, \n",
         "          \"driver\":\"org.postgresql.Driver\"}\n"
